added fix flag to linting

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -12,13 +12,14 @@
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-extra-semi": "off",
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/array-type": "off",
     "@typescript-eslint/no-object-literal-type-assertion": "off",
-    "no-multiple-empty-lines": "error",
-    "semi": [2, "always"]
+    //    "semi": [2, "always"],
+    "no-multiple-empty-lines": "error"
   }
 }
